cabal-version: 3.0
name:          cabal2stack
version:       0
synopsis:      Create stack.yaml from cabal-install's plan.json
description:   Create stack.yaml from cabal-install's plan.json.
category:      Development
copyright:     2022 Well-Typed LLP
author:        Oleg Grenrus <oleg@well-typed.com>
maintainer:    Oleg Grenrus <oleg@well-typed.com>
license:       BSD-3-Clause
license-file:  LICENSE

executable cabal2stack
  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          cabal2stack.hs
  hs-source-dirs:   src

  -- boot dependencies
  build-depends:
    , base          >=4.12     && <4.17
    , bytestring    ^>=0.10.8.2 || ^>=0.11.3.0
    , containers    ^>=0.6.0.1
    , directory     ^>=1.3.3.0
    , filepath      ^>=1.4.2.1
    , process       ^>=1.6.5.0
    , text          ^>=1.2.3.0
    , transformers  ^>=0.5.6.2

  -- other dependencies
  build-depends:
    , cabal-plan            ^>=0.7.2.1
    , HsYAML                ^>=0.2.1.1
    , optics                ^>=0.4.2
    , optparse-applicative  ^>=0.17.0.0
